--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -21,12 +21,34 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if cat_menu %}
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Categories
+                </button>
+                <ul class="dropdown-menu">
+
+                  {% for item in cat_menu %}
+                    <a class="dropdown-item" href="{% url 'category' item|slugify %}">{{ item }}</a></li>
+                     
+                {% endfor %}
+                  
+                </ul>
+              </div>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'category-list' %}">Category List</a>
+              </li>
+              {% endif %}
 
               {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_post' %}">Add Post</a>
               </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">logout</a>
               </li>
@@ -47,15 +69,6 @@
               </li>
              
 
-
-              <li class="nav-item dropdown">
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
