--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -10,7 +10,9 @@
 
 <ul>
 {% for post in object_list %}
-    <a href="{% url 'article-detail' post.pk %}"><li>{{post.title}}</li> </a>- {{post.author }}
+    <a href="{% url 'article-detail' post.pk %}"><li>{{post.title}}</li> </a>- {{post.author }} 
+    --{{ post.post_date }}-
+    <a href="{% url 'category' post.category|slugify %}">{{ post.category }}</a>
     {% if user.is_authenticated %}
                 <a href="{% url 'update_post' post.pk %}">(Edit)</a>
                 
@@ -22,4 +24,7 @@
         
 {% endfor %}
 </ul>
+
+
+
 {% endblock %}
